objects/Campaign_Mgmt_VF_Page_Assignment__c.object
<CustomObject>
    <description>Allows admins to specify which VF page layout a user of a given profile should see</description>
    <fields>
        <fullName>Campaign_VF_Layout__c</fullName>
        <label>Campaign VF Layout</label>
        <picklist>
            <picklistValues>
                <fullName>Inside Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Inside Sales</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Display_Follow_up_Needed__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Display Follow-up Needed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Filter_by_Account_Team__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Filter by Account Team</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Gen_Checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True Or False of this check box makes the &apos;save &amp; Create Lead&apos; and &apos;Save &amp; Create Opportunity&apos; buttons visible or not to related profile in the that record.</description>
        <label>Lead Gen Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Profile_Name__c</fullName>
        <label>Profile Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Show_Log_a_Call__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Determines whether or not the Log-a-Call section (at the top) of the Log Activity Opportunity page displays.</description>
        <inlineHelpText>Determines whether or not the Log-a-Call section (at the top) of the Log Activity Opportunity page displays.</inlineHelpText>
        <label>Show Log-a-Call?</label>
        <type>Checkbox</type>
    </fields>
    <label>Campaign Mgmt VF Page Assignment</label>
    <listViews>
        <fullName>All_Data</fullName>
        <columns>NAME</columns>
        <columns>Profile_Name__c</columns>
        <columns>Campaign_VF_Layout__c</columns>
        <columns>Lead_Gen_Checkbox__c</columns>
        <columns>Filter_by_Account_Team__c</columns>
        <columns>Display_Follow_up_Needed__c</columns>
        <columns>Show_Log_a_Call__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All Data</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>Mapping ID {000000}</displayFormat>
        <label>Campaign Mgmt VF Page Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Mgmt VF Page Assignments</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>